# dev-best-practices

./: CLAUDE.md  GETTING-STARTED.md  INDEX.md  INDEX.md.bak  INDEX.md.resolved  daily-briefing.skill  knowledge-review.skill  project-research.skill  project-scaffold.skill  topic-deep-dive.skill
.claude/: settings.local.json
DailyBriefing/: 03-18-2026.md  03-19-2026.md  03-20-2026.md  03-21-2026.md  03-22-2026.md  03-28-2026.md  03-29-2026.md  weekly-audit-2026-03-21.md  weekly-audit-2026-03-28.md
agentic-research-app/: .env.example  .gitignore  CLAUDE.md  agents.md  pyproject.toml
agentic-research-app/.claude/: settings.json
agentic-research-app/.claude/hooks/: block-secrets.sh
agentic-research-app/.cursor/rules/: project.mdc
agentic-research-app/docs/: ARCHITECTURE.md  TASKS.md
agentic-research-app/docs/references/: AI-DEV-GUIDES.md
agentic-research-app/evals/: conftest.py
agentic-research-app/skills/feature-workflow/: SKILL.md
agentic-research-app/skills/review-checklist/: SKILL.md
daily-briefing/: SKILL.md
docs/: PROJECT-BRIEF.md
docs/plan/: INPUTS.md  PLAN.md  REVIEW.md
docs/research/: REVIEW-2026-03-19.md  SCOPE.md  SYNTHESIS.md  calbot-SYNTHESIS.md  calbot-competitive-landscape.md  calbot-technical-feasibility.md  domain.md  emerging.md  landscape.md  technical.md  telegram-calorie-bot-market-research.md
docs/ski-ecommerce-research/: SCOPE.md  SYNTHESIS.md  domain.md  landscape.md  (+1 more)
knowledge-review/: SKILL.md
references/: research-and-reports.md  tools-and-frameworks.md  tutorials-and-guides.md
topic-deep-dive/: SKILL.md
(+110 files in other folders)
