[project]
name = "agentic-research-app"
version = "0.1.0"
description = "An agentic research assistant that searches, reads, and synthesizes findings into reports"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "trafilatura>=2.0.0",
    "rich>=13.0",
    "tavily-python>=0.5.0",
    "sentence-transformers",
]

[project.optional-dependencies]
finance = [
    "yfinance>=0.2.0",
]
brave = [
    "brave-search>=0.3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "deepeval>=1.0",
    "respx>=0.22.0",
    "black>=24.0",
]

[project.scripts]
research = "src.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["evals"]
markers = [
    "slow: marks tests that call external APIs or LLMs (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 100
target-version = ["py311"]
